--- a/static-web-server/Dockerfile
+++ b/static-web-server/Dockerfile
@@ -1,1 +1,7 @@
-FROM nginx
+FROM nginx:alpine
+
+# Copy content into the container
+COPY ./content /www/data
+
+# Copy the nginx.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
