correct nginx conf, update read me

--- a/static-web-server/nginx.conf
+++ b/static-web-server/nginx.conf
@@ -1,13 +1,17 @@
 http {
     server {
+        # define the port and that this is the default server
         listen 80 default_server;
-        servername localhost;
-
+        # define the server name
+        server_name localhost;
+        # define the path where to find the files
         root /www/data;
 
+        # define that / url path shows the content in the root location
         location / {
+            # define that by default index.html is shown if the path / is accessed.
             index index.html;
         }
-        # Server configuration
     }
 }
+events {}
