correct logging and add gitignore to not push logs

--- a/static-web-server/nginx.conf
+++ b/static-web-server/nginx.conf
@@ -7,6 +7,10 @@ http {
         # define the path where to find the files
         root /www/data;
 
+        # define where to write the access and error log
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
+
         # define that / url path shows the content in the root location
         location / {
             # define that by default index.html is shown if the path / is accessed.
