correct nginx conf for mime types

--- a/static-web-server/nginx.conf
+++ b/static-web-server/nginx.conf
@@ -1,5 +1,7 @@
 http {
     server {
+        include /etc/nginx/mime.types;
+
         # define the port and that this is the default server
         listen 80 default_server;
         # define the server name
