--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     volumes:
       - ./static-web-server/logs:/var/log/nginx
     labels:
-      - traefik.http.routers.static-web-server.rule=Host(`static-web-server.localhost`)
+      - traefik.http.routers.static-web-server.rule=Host(`localhost`)
+      #- traefik.http.routers.static-web-server.service=www-service
 
   #api_server:
     #container_name: api_server
@@ -26,7 +27,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
-      - "8081:80" # Web-server
+      - "80:80" # Web-server
       - "8080:8080" # Dashboard
 
 
