--- a/api-server/pom.xml
+++ b/api-server/pom.xml
@@ -8,9 +8,6 @@
 
     <properties>
         <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
@@ -28,7 +25,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ch.heig.dai.labo.smtp.Application</mainClass>
+                            <mainClass>ch.heig.dai.lab.http.api.Server</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
