--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
   api_server:
     container_name: api_server
     build: ./api-server
+    ports:
+     - "7000:80"
     labels:
       - traefik.http.routers.api-server.rule=Path(/api)
     # restart: always
