--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     labels:
       - "traefik.enable=true" # Explicitly tell traefik to expose this container
       - "traefik.http.routers.static-router.rule=Host(`static.localhost`)" #the domain the service will respond to
-      - "traefik.http.routers.myrouter.entrypoints=web,websecure" # allow request only on web and websecure address defined on traeefik service
+      - "traefik.http.routers.static-router.entrypoints=web,websecure" # allow request only on web and websecure address defined on traeefik service
+      - "traefik.http.services.static-router.loadbalancer.server.port=80"
 
 
     # To deploy statically a number of instances of this container
@@ -29,6 +30,7 @@ services:
       - "traefik.enable=true" # Explicitly tell traefik to expose this container
       - "traefik.http.routers.api-router.rule=PathPrefix(`/api/`)" # the service will respond to path prefixed by /api
       - "traefik.http.routers.api-router.service=api-router" # routes all requests to the service api-router
+      - "traefik.http.services.myservice.loadbalancer.server.port=80"
       - "traefik.http.services.api-router.loadBalancer.sticky=true" # Enable sticky session
       - "traefik.http.services.api-router.loadBalancer.sticky.cookie.name=MyBelovedTest" # Name the cookie to be sent
       - "traefik.http.services.api-router.loadBalancer.sticky.cookie.secure=true" # Cookie is encrypted
