--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,16 +16,16 @@ services:
       - "traefik.http.routers.static-router.entrypoints=web,websecure" # allow request only on web and websecure address defined on traeefik service
       - "traefik.http.services.static-router.loadbalancer.server.port=80"
 
+      # To deploy statically a number of instances of this container
+      #deploy:
+      # replicas: 5
 
-    # To deploy statically a number of instances of this container
-    #deploy:
-     # replicas: 5
 
   api_server:
     #container_name: api_server
     build: ./api-server
     expose:
-     - "80"
+      - "80"
     labels:
       - "traefik.enable=true" # Explicitly tell traefik to expose this container
       - "traefik.http.routers.api-router.rule=PathPrefix(`/api/`)" # the service will respond to path prefixed by /api
@@ -35,9 +35,10 @@ services:
       - "traefik.http.services.api-router.loadBalancer.sticky.cookie.name=MyBelovedTest" # Name the cookie to be sent
       - "traefik.http.services.api-router.loadBalancer.sticky.cookie.secure=true" # Cookie is encrypted
 
-   # To deploy statically a number of instances of this container
-    #deploy:
-     # replicas: 5
+      # To deploy statically a number of instances of this container
+      #deploy:
+      # replicas: 5
+
 
   traefik:
     image: traefik
@@ -55,3 +56,27 @@ services:
       - "8080:8080" # Dashboard
 
 
+  api_website:
+    image: nginx:alpine
+    expose:
+      - 80
+      - 443
+    volumes:
+      - ./api-website/nginx.conf:/etc/nginx/nginx.conf
+      - ./api-website/content:/www/data
+      - ./api-website/logs:/var/log/nginx
+    labels:
+      - "traefik.enable=true" # Explicitly tell traefik to expose this container
+      - "traefik.http.routers.static-router.rule=Host(`localhost`)" #the domain the service will respond to
+      - "traefik.http.routers.static-router.entrypoints=web,websecure" # allow request only on web and websecure address defined on traeefik service
+      - "traefik.http.services.static-router.loadbalancer.server.port=80"
+
+
+  portainer:
+    image: portainer/portainer-ce:latest
+    ports:
+      - 9443:9443
+    volumes:
+      - ./portainer/data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
