--- a/reverse-proxy/traefik.yaml
+++ b/reverse-proxy/traefik.yaml
@@ -1,22 +1,41 @@
-## Static configurations files
-
+## Static configuration
 api:
   insecure: true
   dashboard: true
 
 log:
+  level: DEBUG
   filePath: /var/log/error.log
 
 # TODO - Change some fields to prove that load balancing is done
 accessLog:
   filePath: /var/log/access.log
+  filters:
+    statusCodes:
+      - "200"
+  fields:
+    defaultMode: keep
+    names:
+      ServiceURL: keep
 
 entryPoints:
   web:
     address: ":80"
+    http:
+      redirections:
+        entryPoint:
+          to: websecure
+          scheme: https
+          permanent: true
   websecure:
     address: ":443"
 
 providers:
   docker:
     exposedByDefault: false
+  file:
+    filename: "/etc/traefik/dynamic/selftls.yml"
+    watch: true # allow traefik to watch for file change during its execution
+
+
+
