--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,13 @@ services:
     labels:
       - "traefik.enable=true" # Explicitly tell traefik to expose this container
       - "traefik.http.routers.static-router.rule=Host(`static.localhost`)" #the domain the service will respond to
-      - "traefik.http.routers.static-router.entrypoints=web,websecure" # allow request only on web and websecure address defined on traeefik service
+      # - "traefik.http.routers.static-router.entrypoints=web,websecure" # allow request only on web and websecure address defined on traeefik service
       - "traefik.http.routers.static-router.tls=true" # activate tls on this router
       - "traefik.http.services.static-router.loadbalancer.server.port=80"
 
       # To deploy statically a number of instances of this container
       #deploy:
       # replicas: 5
-
 
   api_server:
     #container_name: api_server
@@ -30,10 +29,8 @@ services:
     labels:
       - "traefik.enable=true" # Explicitly tell traefik to expose this container
       - "traefik.http.routers.api-router.rule=PathPrefix(`/api/`)" # the service will respond to path prefixed by /api
-      - "traefik.http.routers.api-router.service=api-service" # routes all requests to the service api-router
-      - "traefik.http.services.api-service.loadbalancer.server.port=80"
-      - "traefik.http.services.api-service.loadbalancer.server.scheme=https"
       - "traefik.http.routers.api-router.tls=true" # activate tls on this router
+      - "traefik.http.services.api-service.loadbalancer.server.port=80"
       - "traefik.http.services.api-service.loadBalancer.sticky=true" # Enable sticky session
       - "traefik.http.services.api-service.loadBalancer.sticky.cookie.name=MyBelovedTest" # Name the cookie to be sent
       - "traefik.http.services.api-service.loadBalancer.sticky.cookie.secure=true" # Cookie is encrypted
@@ -41,6 +38,22 @@ services:
       # To deploy statically a number of instances of this container
       #deploy:
       # replicas: 5
+
+
+  api_website:
+    image: nginx:alpine
+    expose:
+      - "80"
+      - "443"
+    volumes:
+      - ./api-website/nginx.conf:/etc/nginx/nginx.conf
+      - ./api-website/content:/www/data
+      - ./api-website/logs:/var/log/nginx
+    labels:
+      - "traefik.enable=true" # Explicitly tell traefik to expose this container
+      - "traefik.http.routers.dynamic-router.rule=Host(`localhost`)" #the domain the service will respond to
+      - "traefik.http.routers.dynamic-router.tls=true" # activate tls on this router
+      - "traefik.http.services.dynamic-router.loadbalancer.server.port=80"
 
 
   reverse-proxy:
@@ -63,23 +76,6 @@ services:
       - "80:80" # Web-server
       - "443:443"
       - "8080:8080" # Dashboard
-
-
-  api_website:
-    image: nginx:alpine
-    expose:
-      - "80"
-      - "443"
-    volumes:
-      - ./api-website/nginx.conf:/etc/nginx/nginx.conf
-      - ./api-website/content:/www/data
-      - ./api-website/logs:/var/log/nginx
-    labels:
-      - "traefik.enable=true" # Explicitly tell traefik to expose this container
-      - "traefik.http.routers.dynamic-router.rule=Host(`localhost`)" #the domain the service will respond to
-      - "traefik.http.routers.dynamic-router.entrypoints=web,websecure" # allow request only on web and websecure address defined on traeefik service
-      - "traefik.http.routers.dynamic-router.tls=true" # activate tls on this router
-      - "traefik.http.services.dynamic-router.loadbalancer.server.port=80"
 
 
   portainer:
