--- a/api-website/nginx.conf
+++ b/api-website/nginx.conf
@@ -1,5 +1,7 @@
 http {
     server {
+        # include the mime-types default configuration
+        # mime.types is used that nginx responds correctly the content type in the HTTP responses
         include /etc/nginx/mime.types;
 
         # define the port and that this is the default server
